--- a/Project/MailSenderApi/Properties/launchSettings.json
+++ b/Project/MailSenderApi/Properties/launchSettings.json
@@ -29,7 +29,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+      "launchUrl": "{Scheme}://{ServiceHost}:{1234}/swagger",
       "publishAllPorts": true,
       "useSSL": true
     }
